# barlow_track_simple

./: README.md  params.yaml  pyproject.toml
scripts/: embedding.py  train.py
src/barlow_track_simple/: augmentation.py  config.py  dataloader.py  dataset.py  model.py  plot.py  siamese.py  tracker.py  unet.py
